--- a/docs/css/02_base.css
+++ b/docs/css/02_base.css
@@ -216,7 +216,7 @@ img {
     padding: var(--padding-section);
 }
 .paddingsmall {
-    padding: var(--space-s) var(--padding-lr);
+    padding: var(--sp_px-s) var(--padding-lr);
 }
 .wrapper {
     max-width: var(--wrapper);
